fp backend created

--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -68,8 +68,8 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">24/7 Παράδοση / Παραλαβή κλειδιών<br>στους / από τους πελάτες σας</h2>
-                    <p class="lead">Αναλαμβάνουμε ανεξαρτήτου ώρας την εξυπηρέτηση των πελατών επισκεπτών σας, για την παράδοση κλειδιών ή και παραλαβή αυτών κατά την αποχώρηση τους. Καθώς επίσης και την πλήρη ενημέρωση τους αναφορικά με θέματα που αφορούν τη διαμονή τους.</p>
+                    <h2 class="section-heading"><%= @box_one.title %></h2>
+                    <p class="lead"><%= @box_one.body %></p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <%= image_tag ("giving-key.jpg"), class:("img-responsive") %>
@@ -90,8 +90,8 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Καθαριότητα<br>& συντήρηση διαμερισμάτων</h2>
-                    <p class="lead">Αναλαμβάνουμε την πλήρη διευθέτηση των εργασιών καθαριότητας ή και συντήρησης του διαμερισματός σας, πριν, μετά αλλά και κατά την διάρκεια διαμονής των επισκεπτών σας.</p>
+                    <h2 class="section-heading"><%= @box_two.title %></h2>
+                    <p class="lead"><%= @box_two.body %></p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <%= image_tag ("housekeeping.jpg"), class:("img-responsive") %>
@@ -112,8 +112,8 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Τεχνικές Εργασίες<br>συντήρησης.</h2>
-                    <p class="lead">Από τη στιγμή της ανάληψης των καθηκόντων μας δεν έχετε λόγο να ανησυχείτε για τίποτε απολύτως. Αναλαμβάνουμε πλήρως την διευθέτηση εργασιών συντήρησης (υδραυλικά, ηλεκτρολογικά, κλπ).<br>ΣΗΜΕΙΩΣΗ:<i> Η Υπηρεσία παρέχεται με επιπλέον χρέωση. Ρωτήστε μας σχετικά.</i></p>
+                    <h2 class="section-heading"><%= @box_three.title %></h2>
+                    <p class="lead"><%= @box_three.body %></p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <%= image_tag ("plumber.jpg"), class:("img-responsive") %>
