socials controller and model added

--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -7,4 +7,13 @@
     <%= link_to 'Edit', edit_welcome_path(w), class: "btn btn-warning btn-xs" %>
     </div>
     <% end %>
+    <hr>
+    <% @socials.each do |s| %>
+    <div class="row">
+    <%= s.facebook %>
+    <%= s.phone %>
+    <%= link_to 'Edit', edit_social_path(s), class: "btn btn-warning btn-xs" %>
+    </div>
+    <% end %>
+    
 </div>
