--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -45,7 +45,7 @@
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                                <a href="#" class="btn btn-primary btn-lg"><i class="fa fa-facebook"></i> <span class="network-name">Facebook</span></a>
+                                <a href="<%= @social.facebook %>" class="btn btn-primary btn-lg"><i class="fa fa-facebook"></i> <span class="network-name">Facebook</span></a>
                             </li>
                         </ul>
                     </div>
@@ -138,7 +138,7 @@
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
                         <li>
-                            <a href="" class="btn btn-default btn-lg"><i class="fa fa-phone"></i> <span class="network-name">6956099994</span></a>
+                            <a href="" class="btn btn-default btn-lg"><i class="fa fa-phone"></i> <span class="network-name"><%= @social.phone %></span></a>
                         </li>
                         <li>
                             <a href="" class="btn btn-default btn-lg"><i class="fa fa-envelope"></i> <span class="network-name">Email</span></a>
