--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,5 +1,12 @@
 <div class="container">
-
+<nav class="navbar navbar-default navbar-fixed-bottom">
+      <div class="container">
+        <ul class="nav navbar-nav">
+            <li><%= link_to 'Front Page Administration', welcomes_path %></li>
+            <li><%= link_to 'Home Page', root_path %></li>
+        </ul>
+      </div>
+    </nav>
 <p id="notice"><%= notice %></p>
 
 <h1>Listing clients</h1>
