--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -141,7 +141,7 @@
                             <a href="" class="btn btn-default btn-lg"><i class="fa fa-phone"></i> <span class="network-name"><%= @social.phone %></span></a>
                         </li>
                         <li>
-                            <a href="" class="btn btn-default btn-lg"><i class="fa fa-envelope"></i> <span class="network-name">Email</span></a>
+                            <a href="" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal"><i class="fa fa-envelope"></i> <span class="network-name">Email</span></a>
                         </li>
                     </ul>
                 </div>
@@ -180,3 +180,21 @@
             </div>
         </div>
     </footer>
+    <!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Παρακαλούμε Εκδηλώστε το Ενδιαφέρον σας</h4>
+      </div>
+      <div class="modal-body">
+        <%= render 'form' %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        
+      </div>
+    </div>
+  </div>
+</div>
