registration email added

--- a/app/views/my_mailer/welcome_email.html.erb
+++ b/app/views/my_mailer/welcome_email.html.erb
@@ -4,10 +4,11 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Hi <%= @client.name %></h1>
-    <p>
-      Thank You for Registering to AirServices WebSite. <br>
-      We shall contact you shortly!
+    <h1>Γειά σας <%= @client.name %></h1>
+    <p>Ευχαριστούμε για την εγγραφή σας, στην AirServices. <br>
+      Θα επικοινωνήσουμε μαζί σας το συντομότερο δυνατό!<br>
+      Ευχαριστούμε<br>
+      Η ομάδα της AirServices
     </p>
   </body>
 </html>
