--- a/app/views/my_mailer/welcome_email.text.erb
+++ b/app/views/my_mailer/welcome_email.text.erb
@@ -1,3 +1,5 @@
-Hi <%= @client.name %>
-      Thank You for Registering to AirServices WebSite. <br>
-      We shall contact you shortly!
+Γειά σας <%= @client.name %>
+Ευχαριστούμε για την εγγραφή σας, στην AirServices.
+Θα επικοινωνήσουμε μαζί σας το συντομότερο δυνατό!
+Ευχαριστούμε
+Η ομάδα της AirServices
