--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -1,4 +1,3 @@
-
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
         <div class="container topnav">
@@ -36,7 +35,11 @@
     <a name="about" id="about"></a><a name="home" id="home"></a>
     <div class="intro-header">
         <div class="container">
-
+            <% if flash[:notice] %>
+            <p id="notice" class="alert alert-success"><%= flash[:notice] %></p>
+            <% else %>
+            <p></p>
+            <% end %>
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
