--- a/app/views/frontpage/_form.html.erb
+++ b/app/views/frontpage/_form.html.erb
@@ -1,9 +1,9 @@
 <div class="modal-form">
 <%= simple_form_for(Client.new, html: { class: 'form-horizontal' }) do |f| %>
-<%= f.input :name %>
-<%= f.input :surname %>
-<%= f.input :phone %>
-<%= f.input :email %>
+<%= f.input :name, :required => true %>
+<%= f.input :surname, :required => true %>
+<%= f.input :phone, :required => true %>
+<%= f.input :email, :required => true %>
 <%= f.input :address %>
 <%= f.input :floor %>
 <%= f.input :message %>
