--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -36,7 +36,7 @@
     <div class="intro-header">
         <div class="container">
             <% if flash[:notice] %>
-            <p id="notice" class="alert alert-success"><%= flash[:notice] %></p>
+            <p id="notice" class="alert alert-success"><%= flash[:notice] %><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button></p>
             <% else %>
             <p></p>
             <% end %>
