--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -1,10 +1,10 @@
 <%= simple_form_for(@client, html: { class: 'form-horizontal' }) do |f| %>
-<%= f.input :name %>
-<%= f.input :surname %>
-<%= f.input :phone %>
-<%= f.input :email %>
-<%= f.input :address %>
-<%= f.input :floor %>
-<%= f.input :message %>
-<%= f.button :submit %>
+<%= f.input :name, :label => "Όνομα", :required => true %>
+<%= f.input :surname, :label => "Επίθετο", :required => true %>
+<%= f.input :phone, :label => "Κινητό", :required => true %>
+<%= f.input :email, :label => "Email", :required => true %>
+<%= f.input :address, :label => "Διεύθυνση" %>
+<%= f.input :floor, :label => "Όροφος" %>
+<%= f.input :message, :label => "Μήνυμα" %>
+<%= f.button :submit, "Εγγραφή" %>
 <% end %>
