--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -2,8 +2,8 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
       <div class="container">
         <ul class="nav navbar-nav">
-            <li><%= link_to 'Front Page Administration', welcomes_path %></li>
-            <li><%= link_to 'Home Page', root_path %></li>
+            <li><%= link_to 'Πίνακας Διαχείρισης', welcomes_path %></li>
+            <li><%= link_to 'Αρχική Σελίδα', root_path %></li>
         </ul>
       </div>
     </nav>
@@ -14,14 +14,13 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Surname</th>
+      <th>Όνομα</th>
+      <th>Επίθετο</th>
       <th>Email</th>
-      <th>Tel</th>
-      <th>Mobile</th>
-      <th>Address</th>
-      <th>Floor</th>
-      <th>Message</th>
+      <th>Κινητό</th>
+      <th>Διεύθυνση</th>
+      <th>Όροφος</th>
+      <th>Μύνημα</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -36,9 +35,9 @@
         <td><%= client.address %></td>
         <td><%= client.floor %></td>
         <td><%= client.message %></td>
-        <td><%= link_to 'Show', client %></td>
-        <td><%= link_to 'Edit', edit_client_path(client) %></td>
-        <td><%= link_to 'Destroy', client, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Εμφάνιση', client %></td>
+        <td><%= link_to 'Επεξεργασία', edit_client_path(client) %></td>
+        <td><%= link_to 'Διαγραφή', client, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
