--- a/app/views/socials/_form.html.erb
+++ b/app/views/socials/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for(@social, html: { class: 'form-horizontal' }) do |f| %>
 <%= f.input :facebook %>
 <%= f.input :phone %>
-<%= f.button :submit %>
+<%= f.button :submit, "Επιβεβαίωση" %>
 <% end %>
