--- a/app/views/socials/edit.html.erb
+++ b/app/views/socials/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-<h1>Edit Social Details</h1>
+<h1>Επεξεργασία Στοιχείων Επικοινωνίας</h1>
 
 <%= render 'form' %>
 <hr>
-<%= link_to 'Cancel', :back, class:"btn btn-default btn-xs" %>
+<%= link_to 'Άκυρο', :back, class:"btn btn-default btn-xs" %>
 </end>
