--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -9,7 +9,7 @@
     </nav>
 <p id="notice"><%= notice %></p>
 
-<h1>Listing clients</h1>
+<h1>Λίστα Πελατών</h1>
 
 <table class="table">
   <thead>
