--- a/app/views/frontpage/new.html.erb
+++ b/app/views/frontpage/new.html.erb
@@ -3,5 +3,5 @@
 
 <%= render 'form' %>
 <hr>
-<%= link_to 'Cancel', :back, class:"btn btn-default btn-xs" %>
+<%= link_to 'Άκυρο', :back, class:"btn btn-default btn-xs" %>
 </end>
