--- a/app/views/sen_to_me/register_email.html.erb
+++ b/app/views/sen_to_me/register_email.html.erb
@@ -7,9 +7,9 @@
     <h1>Νέα εγγραφή στο AirServices</h1>
     <h4>Με στοιχεία:</h4>
     <ul>
-      <ol><%= @client.surname %></ol>
-      <ol><%= @client.email %></ol>
-      <ol><%= @client.phone %></ol>
+      <ol>Όνομα: <%= @client.surname %></ol>
+      <ol>Email: <%= @client.email %></ol>
+      <ol>Κινητό: <%= @client.phone %></ol>
     </ul>
   </body>
 </html>
