--- a/app/views/sen_to_me/register_email.text.erb
+++ b/app/views/sen_to_me/register_email.text.erb
@@ -1,6 +1,6 @@
 Νέα εγγραφή στο AirServices
     Με στοιχεία:
     
-      <%= @client.surname %>
-      <%= @client.email %>
-      <%= @client.phone %>
+      Όνομα: <%= @client.surname %>
+      Email: <%= @client.email %>
+      Κινητό: <%= @client.phone %>
