categories & services added

--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -3,6 +3,8 @@
       <div class="container">
         <ul class="nav navbar-nav">
             <li><%= link_to 'Διαχείριση Πελατών', clients_path %></li>
+            <li><%= link_to 'Διαχείριση Υπηρεσιών', services_path %></li>
+            <li><%= link_to 'Διαχείριση Κατηγοριών', categories_path %></li>
             <li><%= link_to 'Αρχική Σελίδα', root_path %></li>
         </ul>
       </div>
