--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -146,6 +146,9 @@
                         <li>
                             <a href="" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal"><i class="fa fa-envelope"></i> <span class="network-name">Email</span></a>
                         </li>
+                        <li>
+                            <a href="" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myServices"><i class="fa fa-euro"></i> <span class="network-name">Τιμοκατάλογος</span></a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -193,6 +196,32 @@
       </div>
       <div class="modal-body">
         <%= render 'form' %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Άκυρο</button>
+        
+      </div>
+    </div>
+  </div>
+</div>
+
+ <!-- Modal -->
+<div class="modal fade" id="myServices" tabindex="-1" role="dialog" aria-labelledby="myServicesLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Κατηγορίες & Τιμοκατάλογος Υπηρεσιών</h4>
+      </div>
+      <div class="modal-body">
+        <% @service_list.each do |category, s_items| %>
+        <h3><%= category %></h3>
+        <ul>
+            <% s_items.each do |s| %>
+            <li><%= s.title %> | <i class="fa fa-eur"></i> <%= s.price %></li>
+            <% end %>
+        </ul>
+        <% end %>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Άκυρο</button>
