--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -3,7 +3,6 @@
       <div class="container">
         <ul class="nav navbar-nav">
             <li><%= link_to 'Πίνακας Διαχείρισης', welcomes_path %></li>
-            <li><%= link_to 'Αρχική Σελίδα', root_path %></li>
         </ul>
       </div>
     </nav>
@@ -27,12 +26,12 @@
         <td><%= service.title %></td>
         <td><%= service.price %></td>
         <td><%= Category.find(service.category_id).name %></td>
-        <td><%= link_to 'Εμφάνιση', service %></td>
-        <td><%= link_to 'Επεξεργασία', edit_service_path(service) %></td>
-        <td><%= link_to 'Διαγραφή', service, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '<i class="fa fa-arrows-alt"></i> Προβολή'.html_safe, service, class:"btn btn-success btn-xs" %></td>
+        <td><%= link_to '<i class="fa fa-edit"></i> Επεξεργασία'.html_safe, edit_service_path(service), class:"btn btn-warning btn-xs" %></td>
+        <td><%= link_to '<i class="fa fa-remove"></i> Διαγραφή'.html_safe, service, class:"btn btn-danger btn-xs", method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-<%= link_to "Νέα Υπηρεσία", new_service_path, class:"btn btn-default btn-xs" %>
+<%= link_to '<i class="fa fa-plus-square"></i> Νέα Υπηρεσία'.html_safe, new_service_path, class:"btn btn-primary btn-xs" %>
 </div>
