property model added

--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -5,6 +5,7 @@
             <li><%= link_to 'Διαχείριση Πελατών', clients_path %></li>
             <li><%= link_to 'Διαχείριση Υπηρεσιών', services_path %></li>
             <li><%= link_to 'Διαχείριση Κατηγοριών', categories_path %></li>
+            <li><%= link_to 'Διαχείριση Ακινήτων', properties_path %></li>
             <li><%= link_to 'Αρχική Σελίδα', root_path %></li>
         </ul>
       </div>
