--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -141,24 +141,17 @@
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <%= image_tag ("housekeeping.jpg"), style:'height:300px', class:("img-responsive") %>
+      <div class="item active">
+      <%= image_tag @property.image.url(:medium), class:("img-responsive") %>
     </div>
+      <% @properties.each do |p| %>
     <div class="item">
-      <%= image_tag ("plumber.jpg"), style:'height:300px', class:("img-responsive") %>
+      <%= image_tag p.image.url(:medium), class:("img-responsive") %>
     </div>
-    <div class="item active">
-      <%= image_tag ("housekeeping.jpg"), style:'height:300px', class:("img-responsive") %>
-    </div>
+    <% end %>
   </div>
 
   <!-- Controls -->
