--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="<%= url_for(action: 'index', controller: 'frontpage') %>"><%= image_tag ("airservices-logo-new-vert.png"), class:("logo") %></a>
+                <a class="navbar-brand topnav" href="<%= url_for(action: 'index', controller: 'frontpage') %>"><%= image_tag ("airservices-logo.png"), class:("logo img-responsive") %></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -43,7 +43,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1><%= image_tag ("airservices-logo-new-vert.png"), class:("main") %> Athens</h1>
+                        <h1><%= image_tag ("airservices-logo.png"), class:("main") %> Athens</h1>
                         <h3>Contemporary Housekeeping by K. Kavounis</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
