--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -136,8 +136,8 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading"><%= @box_two.title %></h2>
-                    <p class="lead"><%= @box_two.body %></p>
+                    <h2 class="section-heading"><%= @box_four.title %></h2>
+                    <p class="lead"><%= @box_four.body %></p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
