services index changed

--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -25,7 +25,7 @@
       <tr>
         <td><%= service.title %></td>
         <td><%= service.price %></td>
-        <td><%= @categories.find(service.category_id).name %></td>
+        <td><%= Category.find(service.category_id).name %></td>
         <td><%= link_to '<i class="fa fa-arrows-alt"></i> Προβολή'.html_safe, service, class:"btn btn-success btn-xs" %></td>
         <td><%= link_to '<i class="fa fa-edit"></i> Επεξεργασία'.html_safe, edit_service_path(service), class:"btn btn-warning btn-xs" %></td>
         <td><%= link_to '<i class="fa fa-remove"></i> Διαγραφή'.html_safe, service, class:"btn btn-danger btn-xs", method: :delete, data: { confirm: 'Are you sure?' } %></td>
