latest working version

--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -150,6 +150,9 @@
       <% @properties.each do |p| %>
     <div class="item">
       <%= image_tag p.image.url(:medium), class:("img-responsive") %>
+      <div class="carousel-caption">
+        <%= p.name %>
+      </div>
     </div>
     <% end %>
   </div>
@@ -259,7 +262,21 @@
         <h4 class="modal-title" id="myModalLabel">Κατηγορίες & Τιμοκατάλογος Υπηρεσιών</h4>
       </div>
       <div class="modal-body">
-       
+           <% @service_list.each do |category, s_items| %>
+        <h3><%= category %></h3>
+        <table class="table">
+            <% s_items.each do |s| %>
+            <tr>
+                <td>
+                    <%= s.title %>
+                </td>
+                <td>
+                    <i class="fa fa-eur"></i> <%= s.price %>
+                </td>
+            </tr>  
+            <% end %>
+        </table>
+        <% end %>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Άκυρο</button>
