--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -15,7 +15,7 @@
     <tr>
       <th>Tίτλος</th>
       <th>Tιμή</th>
-      
+      <th>Κατηγορία</th>
       <th colspan="3"></th>
     </tr>
   </thead>
