--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for(@service, html: { class: 'form-horizontal' }) do |f| %>
 <%= f.input :title, :label => "Τίτλος" %>
 <%= f.input :price, :label => "Τιμή" %>
-<%= f.input :category_id, collection: Category.all, prompt: "Κατηγορία" %>
+<%= f.input :category_id, collection: Category.all, prompt: "Κατηγορία", :required => true %>
 <%= f.button :submit, "Επιβεβαίωση" %>
 <% end %>
