minor changes on controllers fp services & index fp

--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -146,6 +146,9 @@
   <div class="carousel-inner" role="listbox">
       <div class="item active">
       <%= image_tag @property.image.url(:medium), class:("img-responsive") %>
+      <div class="carousel-caption">
+        <%= @property.name %>
+      </div>
     </div>
       <% @properties.each do |p| %>
     <div class="item">
