--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -232,7 +232,7 @@
                             <a href="#contact" class="scroll">Επικοινωνία</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; AirServices <%= Time.now.year %>. All Rights Reserved</p>
+                    <p class="copyright text-muted small">Copyright &copy; AirServices <%= Time.now.year %>. All Rights Reserved | Developed by <a href="http://fifart.net" target="_blank">FiFart</a></p>
                 </div>
             </div>
         </div>
