--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -145,14 +145,14 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
       <div class="item active">
-      <%= image_tag @property.image.url(:medium), class:("img-responsive") %>
+      <img src="<%= @property.image_link %>" class="img-responsive" />
       <div class="carousel-caption">
         <%= @property.name %>
       </div>
     </div>
       <% @properties.each do |p| %>
     <div class="item">
-      <%= image_tag p.image.url(:medium), class:("img-responsive") %>
+      <img src="<%= p.image_link %>" class="img-responsive" />
       <div class="carousel-caption">
         <%= p.name %>
       </div>
