--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for(@property, html: { class: 'form-horizontal', multipart: true }) do |f| %>
 <%= f.input :name, :label => "'Ονομα" %>
-<%= f.input :image, as: :file %>
+<%= f.input :image_link, :label => "Επικόλληση Link από Dropbox" %>
 <%= f.button :submit, "Επιβεβαίωση" %>
 <% end %>
